responsive and alignment issues fix

--- a/vtr-ui/src/app/components/display/eye-care-mode/eye-care-mode.component.scss
+++ b/vtr-ui/src/app/components/display/eye-care-mode/eye-care-mode.component.scss
@@ -39,7 +39,7 @@
 
   .custom-control-label {
 	padding-left: 0.5rem;
-	line-height: 1.1;
+	line-height: 1.15;
 
     // rounded square-box background
     &::before {
