--- a/vtr-ui/src/app/components/pages/page-device-settings/children/subpage-device-settings-power/subpage-device-settings-power.component.scss
+++ b/vtr-ui/src/app/components/pages/page-device-settings/children/subpage-device-settings-power/subpage-device-settings-power.component.scss
@@ -131,7 +131,8 @@
 		font-size:4.5rem;
 	}
   .custom-control-label {
-    padding-left: 0.5rem;
+	padding-left: 0.5rem;
+	line-height: 1.15;
 
     // rounded square-box background
     &::before {
